Fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -487,6 +487,11 @@ top: -8px;
   min-width: 90%;
 }
 
+#containerArea .col-md-3{
+  width: 20%;
+}
+
+
 .team{
   padding-top: 20px;
   padding-bottom: 20px;
@@ -559,6 +564,7 @@ top: -8px;
 /*=========================================
 	Some fun facts
 ==========================================*/
+
 
 #facts {
 	background-image: url("../img/parallax/city.jpg");
